Fix for bug #43487 (Wrong conversion of float to string)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@263639 c90b9560-bf6c-de11-be94-00142212c4b1